# gopnik2

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.cpp  game.h  hero.cpp  hero.h  list.cpp  list.h  macros.h  main.cpp  main.h  platform.h  utils.cpp  utils.h  utils.hpp
.github/workflows/: ci_build.yml
comm/: Makefile  _ae.cpp  _clsc.cpp  _sv.cpp  _vis.cpp  _w.cpp  a.cpp  b.cpp  bar.cpp  bb.cpp  bmar.cpp  bsale.cpp  comm.h  cstat.cpp  d.cpp  e.cpp  gamb.cpp  girl.cpp  gop2_st.h  h.cpp  help.cpp  hp.cpp  i.cpp  inv.cpp  jmp.cpp  k.cpp  kl.cpp  kos.cpp  lar.cpp  lar_b.cpp  loa.cpp  mar.cpp  meet.cpp  met.cpp  mh.cpp  ob.cpp  p.cpp  pon.cpp  pr.cpp  r.cpp  (+25 more)
gopnik2/: game.cpp  hero.cpp  list.cpp  main.cpp  utils.cpp
gopnik2/comm/: _ae.cpp  _clsc.cpp  _sv.cpp  _w.cpp  a.cpp  b.cpp  bar.cpp  bb.cpp  bmar.cpp  bsale.cpp  cstat.cpp  d.cpp  e.cpp  gamb.cpp  girl.cpp  h.cpp  help.cpp  hp.cpp  i.cpp  inv.cpp  jmp.cpp  k.cpp  kl.cpp  kos.cpp  lar.cpp  lar_b.cpp  loa.cpp  mar.cpp  meet.cpp  met.cpp  mh.cpp  ob.cpp  p.cpp  pon.cpp  pr.cpp  r.cpp  raid.cpp  rep.cpp  rsl.cpp  run.cpp  (+21 more)
gopnik2/include/: game.h  list.h
gopnik2/include/comm/: gop2_st.h
gopnik2/include/pltl/: pltl.h
gopnik2/pltl/: pltl0.cpp  pltl1.cpp  pltl2.cpp
pltl/: Makefile  pltl.h  pltl0.cpp  pltl1.cpp  pltl2.cpp
src/: game.cpp  hero.cpp  hero_type.cpp  list.cpp  main.cpp  utils.cpp
src/comm/: _ae.cpp  _sv.cpp  _w.cpp  a.cpp  b.cpp  bar.cpp  bb.cpp  bmar.cpp  bsale.cpp  cstat.cpp  d.cpp  e.cpp  gamb.cpp  girl.cpp  h.cpp  help.cpp  hp.cpp  i.cpp  inv.cpp  jmp.cpp  k.cpp  kl.cpp  kos.cpp  lar.cpp  lar_b.cpp  loa.cpp  mar.cpp  meet.cpp  met.cpp  mh.cpp  ob.cpp  p.cpp  pon.cpp  pr.cpp  r.cpp  raid.cpp  rep.cpp  rsl.cpp  run.cpp  s.cpp  (+20 more)
src/include/: platform.h
src/include/gopnik2/: forward.h  game.h  hero.h  hero_type.h  list.h  macros.h  main.h  platform.h  utils.h
src/include/gopnik2/comm/: comm.h  gop2_st.h
src/pltl/: pltl0.cpp  pltl1.cpp  pltl2.cpp
test/: CMakeLists.txt  r_check.cpp
tests/: test.cpp
